--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     { name: "Thermite", team: "attacker", image: "https://raw.githubusercontent.com/life7729/r6-combiner/main/r6-operators-list-thermite.webp" },
     { name: "Twitch", team: "attacker", image: "https://raw.githubusercontent.com/life7729/r6-combiner/main/r6-operators-list-twitch.webp" },
     { name: "Montagne", team: "attacker", image: "https://raw.githubusercontent.com/life7729/r6-combiner/main/r6-operators-list-montagne.webp" },
-    { name: "Glaz", team: "attacker", image: "https://raw.githubusercontent.com/life7729/r6-combiner/main/r6-operators-list-glaz.webp" },
+    { name: "Glaz", team: "attacker", image: "r6-operators-list-glaz.webp" },
     { name: "Fuze", team: "attacker", image: "https://raw.githubusercontent.com/life7729/r6-combiner/main/r6-operators-list-fuze.webp" },
     { name: "Blitz", team: "attacker", image: "https://raw.githubusercontent.com/life7729/r6-combiner/main/r6-operators-list-blitz.webp" },
     { name: "IQ", team: "attacker", image: "https://raw.githubusercontent.com/life7729/r6-combiner/main/r6-operators-list-iq.webp" },
