--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     { name: "Flores", team: "attacker", image: "r6-operators-list-flores.webp" },
     { name: "Osa", team: "attacker", image: "r6-operators-list-osa.webp" },
     { name: "Sens", team: "attacker", image: "r6-operators-list-sens.webp" },
-    { name: "Grim", team: "attacker", image: "r6-operators-list-drim.webp" },
+    { name: "Grim", team: "attacker", image: "r6-operators-list-grim.webp" },
     { name: "Brava", team: "attacker", image: "r6-operators-list-brava.webp" },
     { name: "Ram", team: "attacker", image: "r6-operators-list-ram.webp" },
     { name: "Deimos", team: "attacker", image: "r6-operators-list-deimos.webp" },
@@ -152,7 +152,7 @@
     { name: "Azami", team: "defender", image: "r6-operators-list-azami.webp" },
     { name: "Solis", team: "defender", image: "r6-operators-list-solis.webp" },
     { name: "Fenrir", team: "defender", image: "r6-operators-list-fenrir.webp" },
-    { name: "Tuburão", team: "defender", image: "r6-operators-list-tuburao.webp" },
+    { name: "Tubarão", team: "defender", image: "r6-operators-list-tubarao.webp" },
     { name: "Skopos", team: "defender", image: "r6-operators-list-skopos.webp" },
   ];
   const btnAttackers = document.getElementById('btn-attackers');
