--- a/operator.html
+++ b/operator.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Operator View</title>
   <style>
     body {
@@ -15,79 +15,73 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      height: 100vh;
       text-align: center;
+    }
+
+    .operator-container {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px white;
     }
 
     .operator-image {
       max-width: 300px;
-      height: auto;
-      margin-bottom: 20px;
+      width: 100%;
+      border-radius: 10px;
     }
 
-    .operator-name {
-      font-size: 2rem;
-      font-weight: bold;
-      margin-bottom: 30px;
+    h1 {
+      margin: 20px 0 10px;
     }
 
     .back-button {
+      margin-top: 20px;
+      background: transparent;
+      border: 2px solid white;
+      color: white;
       padding: 10px 20px;
       font-size: 1rem;
-      border: 2px solid white;
       border-radius: 5px;
-      background-color: transparent;
-      color: white;
       cursor: pointer;
-      box-shadow: 0 0 8px white;
-      transition: background-color 0.3s, color 0.3s;
+      box-shadow: 0 0 10px white;
+      transition: background-color 0.3s;
     }
 
     .back-button:hover {
-      background-color: rgba(255, 255, 255, 0.2);
+      background-color: rgba(255,255,255,0.2);
     }
   </style>
 </head>
 <body>
 
-  <div id="operator-display">
-    <!-- Image and name will go here -->
-  </div>
+<div class="operator-container">
+  <img id="operatorImage" class="operator-image" src="" alt="Operator" />
+  <h1 id="operatorName">Operator</h1>
+  <button class="back-button" onclick="goBack()">← Back</button>
+</div>
 
-  <button class="back-button" onclick="goBack()">← Back to Operators Menu</button>
+<script>
+  // Get operator name from URL
+  const params = new URLSearchParams(window.location.search);
+  const operatorName = params.get('name');
 
-  <script>
-    function getQueryParam(param) {
-      const urlParams = new URLSearchParams(window.location.search);
-      return urlParams.get(param);
-    }
+  if (operatorName) {
+    const lower = operatorName.toLowerCase().replace(/[^a-z0-9]/gi, '');
+    const imageName = `r6-operators-base-${lower}-removebg-preview.png`;
 
-    function goBack() {
-      window.location.href = "index.html";
-    }
+    document.getElementById('operatorImage').src = imageName;
+    document.getElementById('operatorImage').alt = operatorName;
+    document.getElementById('operatorName').textContent = operatorName;
+  } else {
+    document.getElementById('operatorName').textContent = 'No operator selected';
+  }
 
-    const operatorName = getQueryParam("name");
-    if (operatorName) {
-      const formattedName = operatorName.replace(/\s+/g, '-').toLowerCase();
-      const imagePath = `r6-operators-base-${formattedName}-removebg-preview.png`;
-
-      const display = document.getElementById("operator-display");
-
-      const img = document.createElement("img");
-      img.src = imagePath;
-      img.alt = operatorName;
-      img.className = "operator-image";
-
-      const nameDiv = document.createElement("div");
-      nameDiv.className = "operator-name";
-      nameDiv.textContent = operatorName;
-
-      display.appendChild(img);
-      display.appendChild(nameDiv);
-    } else {
-      document.getElementById("operator-display").innerHTML = "<p>Operator not specified.</p>";
-    }
-  </script>
+  function goBack() {
+    window.location.href = 'index.html';
+  }
+</script>
 
 </body>
 </html>
