--- a/index.html
+++ b/index.html
@@ -205,5 +205,24 @@
   renderOperators('attacker');
 </script>
 
+<div style="text-align: center; margin-bottom: 40px;">
+  <a href="operator.html?name=Striker" style="
+    display: inline-block;
+    padding: 12px 24px;
+    background-color: transparent;
+    border: 2px solid white;
+    color: white;
+    border-radius: 6px;
+    text-decoration: none;
+    font-size: 1rem;
+    box-shadow: 0 0 8px white;
+    transition: background-color 0.3s;
+  " onmouseover="this.style.backgroundColor='rgba(255,255,255,0.2)'" 
+     onmouseout="this.style.backgroundColor='transparent'">
+    Test Link to Striker
+  </a>
+</div>
+
+  
 </body>
 </html>
