--- a/index.html
+++ b/index.html
@@ -161,33 +161,34 @@
   const defendersList = document.getElementById('defenders-list');
 
   function renderOperators(team) {
-    const container = team === 'attacker' ? attackersList : defendersList;
-    const otherContainer = team === 'attacker' ? defendersList : attackersList;
+  const container = team === 'attacker' ? attackersList : defendersList;
+  const otherContainer = team === 'attacker' ? defendersList : attackersList;
 
-    container.innerHTML = ''; // Clear the container
-    otherContainer.classList.add('hidden');
-    container.classList.remove('hidden');
+  container.innerHTML = ''; // Clear the container
+  otherContainer.classList.add('hidden');
+  container.classList.remove('hidden');
 
-    operators
-      .filter(op => op.team === team)
-      .forEach(op => {
-        const card = document.createElement('div');
-        card.className = 'operator-card';
-        card.setAttribute('data-operator', op.name);
+  operators
+    .filter(op => op.team === team)
+    .forEach(op => {
+      const card = document.createElement('a');
+      card.href = `operator.html?name=${encodeURIComponent(op.name)}`;
+      card.className = 'operator-card';
+      card.setAttribute('data-operator', op.name);
 
-        const img = document.createElement('img');
-        img.src = op.image;
-        img.alt = op.name;
+      const img = document.createElement('img');
+      img.src = op.image;
+      img.alt = op.name;
 
-        const nameDiv = document.createElement('div');
-        nameDiv.className = 'operator-name';
-        nameDiv.textContent = op.name;
+      const nameDiv = document.createElement('div');
+      nameDiv.className = 'operator-name';
+      nameDiv.textContent = op.name;
 
-        card.appendChild(img);
-        card.appendChild(nameDiv);
-        container.appendChild(card);
-      });
-  }
+      card.appendChild(img);
+      card.appendChild(nameDiv);
+      container.appendChild(card);
+    });
+}
 
   btnAttackers.addEventListener('click', () => {
     btnAttackers.classList.add('active');
