--- a/operator.html
+++ b/operator.html
@@ -10,76 +10,78 @@
       font-family: Arial, sans-serif;
       background: url('R6BlueBackground.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: white;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
+      color: white;
       text-align: center;
     }
 
     .operator-container {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .operator-name {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      text-shadow: 0 0 10px black;
     }
 
     .operator-image {
-      max-width: 300px;
-      width: 100%;
+      max-width: 90%;
+      max-height: 80vh;
+      object-fit: contain;
       border-radius: 10px;
+      box-shadow: 0 0 20px white;
     }
 
-    h1 {
-      margin: 20px 0 10px;
-    }
-
-    .back-button {
-      margin-top: 20px;
-      background: transparent;
-      border: 2px solid white;
-      color: white;
-      padding: 10px 20px;
-      font-size: 1rem;
-      border-radius: 5px;
-      cursor: pointer;
-      box-shadow: 0 0 10px white;
-      transition: background-color 0.3s;
-    }
-
-    .back-button:hover {
-      background-color: rgba(255,255,255,0.2);
+    .error-message {
+      color: red;
+      font-size: 1.2rem;
+      text-shadow: 0 0 5px black;
     }
   </style>
 </head>
 <body>
 
-<div class="operator-container">
-  <img id="operatorImage" class="operator-image" src="" alt="Operator" />
-  <h1 id="operatorName">Operator</h1>
-  <button class="back-button" onclick="goBack()">← Back</button>
+<div class="operator-container" id="operatorDisplay">
+  <!-- Populated by script -->
 </div>
 
 <script>
-  // Get operator name from URL
+  // Read operator name from URL
   const params = new URLSearchParams(window.location.search);
   const operatorName = params.get('name');
 
-  if (operatorName) {
-    const lower = operatorName.toLowerCase().replace(/[^a-z0-9]/gi, '');
-    const imageName = `r6-operators-base-${lower}-removebg-preview.png`;
-
-    document.getElementById('operatorImage').src = imageName;
-    document.getElementById('operatorImage').alt = operatorName;
-    document.getElementById('operatorName').textContent = operatorName;
-  } else {
-    document.getElementById('operatorName').textContent = 'No operator selected';
+  // Format filename
+  function generateFilename(name) {
+    const normalized = name.toLowerCase()
+      .normalize('NFD')                // Remove accents like ø or ã
+      .replace(/[\u0300-\u036f]/g, '') // Remove combining marks
+      .replace(/\s+/g, '-')            // Replace spaces with hyphens
+      .replace(/[^a-z0-9-]/g, '');     // Remove special characters
+    return `r6-operators-base-${normalized}-removebg-preview.png`;
   }
 
-  function goBack() {
-    window.location.href = 'index.html';
+  const container = document.getElementById('operatorDisplay');
+
+  if (operatorName) {
+    const img = document.createElement('img');
+    img.src = generateFilename(operatorName);
+    img.alt = operatorName;
+    img.className = 'operator-image';
+
+    const title = document.createElement('div');
+    title.className = 'operator-name';
+    title.textContent = operatorName;
+
+    container.appendChild(title);
+    container.appendChild(img);
+  } else {
+    container.innerHTML = `<div class="error-message">No operator selected.</div>`;
   }
 </script>
 
