--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     text-align: center;
     padding: 8px;
     box-shadow: 0 0 10px white;
+    display: inline-block;
   }
   .operator-card img {
     width: 100px;
@@ -77,6 +78,7 @@
 <div id="defenders-list" class="hidden"></div>
 
 <script>
+  // Your operators array with no <script> tag inside
   const operators = [
     { name: "Striker", team: "attacker", image: "r6-operators-list-striker.webp" },
     { name: "Sledge", team: "attacker", image: "r6-operators-list-sledge.webp" },
@@ -155,7 +157,7 @@
     { name: "Tubarão", team: "defender", image: "r6-operators-list-tubarao.webp" },
     { name: "Skopos", team: "defender", image: "r6-operators-list-skopos.webp" },
   ];
-<script>
+
   const btnAttackers = document.getElementById('btn-attackers');
   const btnDefenders = document.getElementById('btn-defenders');
   const attackersList = document.getElementById('attackers-list');
@@ -206,6 +208,7 @@
 
   // Initial render: Attackers visible by default
   renderOperators('attacker');
-  </script>
- </body>
+</script>
+
+</body>
 </html>
